the first editing

--- a/zazor/index.html
+++ b/zazor/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Cadastre</title>
+	<title>Zazor</title>
 </head>
 <body>
 	<div class="wrapper">
@@ -231,64 +231,64 @@
 			</aside>
 			<main class="center-column">
 				<figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+				    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">90.00</figcaption>
 			   </figure>
 			   <figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">115.00</figcaption>
 			    </figure>
 			    <figure>
-				   <a href="#">
-				   		<figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">393.00</figcaption>
 			    </figure>
 			    <figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+				    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">90.00</figcaption>
 			   </figure>
 			   <figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">115.00</figcaption>
 			    </figure>
 			    <figure>
-				   <a href="#">
-				   		<figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">393.00</figcaption>
 			    </figure>
 			    <figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+				    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
+					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">90.00</figcaption>
 			   </figure>
 			   <figure>
-				    <a href="#">
-					    <figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
+					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">115.00</figcaption>
 			    </figure>
 			    <figure>
-				   <a href="#">
-				   		<figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
+					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
 					<figcaption class="item-price">393.00</figcaption>
@@ -300,29 +300,41 @@
 					<form action="#">
 						<p class="side-item-title-right">шины</p>
 						<div class="brand">
+							<label for="brand1">
 							<input name="brand1" type="checkbox" id="brand1">
-							<label for="brand1">Бренд 1</label>
+							<span>Бренд 1</span>
+							</label>
 						</div>
 						<div class="brand">
+							<label for="brand2">
 							<input name="brand2" type="checkbox" id="brand2">
-							<label for="brand2">Бренд 2</label>
+							<span>Бренд 2</span>
+							</label>
 						</div>
 						<div class="brand">
+							<label for="brand3">
 							<input name="brand3" type="checkbox" id="brand3">
-							<label for="brand3">Бренд 3</label>
+							<span>Бренд 3</span>
+							</label>
 						</div>
 						<p class="side-item-title-right">диски</p>
 						<div class="brand">
-							<input name="brand1" type="checkbox" id="brand-1">
-							<label for="brand-1">Бренд 1</label>
+							<label for="brand4">
+							<input name="brand4" type="checkbox" id="brand4">
+							<span>Бренд 1</span>
+							</label>
 						</div>
 						<div class="brand">
-							<input name="brand2" type="checkbox" id="brand-2">
-							<label for="brand-2">Бренд 2</label>
+							<label for="brand5">
+							<input name="brand5" type="checkbox" id="brand5">
+							<span>Бренд 2</span>
+							</label>
 						</div>
 						<div class="brand">
-							<input name="brand3" type="checkbox" id="brand-3">
-							<label for="brand-3">Бренд 3</label>
+							<label for="brand6">
+							<input name="brand6" type="checkbox" id="brand6">
+							<span>Бренд 3</span>
+							</label>
 						</div>
 						<input class="choose" type="button" value="ВЫБРАТЬ">
 					</form>
