the third edititng

--- a/zazor/index.html
+++ b/zazor/index.html
@@ -235,64 +235,64 @@
 					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">90.00</figcaption>
-			   </figure>
-			   <figure>
+					<p class="item-price">90.00</p>
+				</figure>
+				<figure>
 					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
 					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">115.00</figcaption>
-			    </figure>
+					<p class="item-price">115.00</p>
+				</figure>
 			    <figure>
 				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
 					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">393.00</figcaption>
-			    </figure>
+					<p class="item-price">393.00</p>
+				</figure>
 			    <figure>
 				    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
 					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">90.00</figcaption>
-			   </figure>
-			   <figure>
+					<p class="item-price">90.00</p>
+				</figure>
+				<figure>
 					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
 					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">115.00</figcaption>
-			    </figure>
+					<p class="item-price">115.00</p>
+				</figure>
 			    <figure>
 				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
 					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">393.00</figcaption>
-			    </figure>
-			    <figure>
+					<p class="item-price">393.00</p>
+				</figure>
+				<figure>
 				    <figcaption class="top-figcaption"><span class="goods-title">Goodyear</span><br>Ultra Grip Extrime</figcaption>
 					<a href="#">
 						<img src="img/goods-1.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">90.00</figcaption>
-			   </figure>
-			   <figure>
+					<p class="item-price">90.00</p>
+				</figure>
+				<figure>
 					<figcaption class="top-figcaption"><span class="goods-title">Nokian</span><br>Hakkapeliitta R</figcaption>
 					<a href="#">
 						<img src="img/goods-2.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">115.00</figcaption>
-			    </figure>
+					<p class="item-price">115.00</p>
+				</figure>
 			    <figure>
 				   <figcaption class="top-figcaption"><span class="goods-title">Hankook</span><br>K 708 155/65 R14</figcaption>
 					<a href="#">
 						<img src="img/goods-3.png" alt="goods"/>
 					</a>
-					<figcaption class="item-price">393.00</figcaption>
-			    </figure>
+					<p class="item-price">393.00</p>
+				</figure>
 	  		</main>
 			<aside class="right-column">
 				<p class="side-menu-title side-menu-title-right">бренды:</p>
